# palletron_visualization

./: CMakeLists.txt  package.xml
launch/: rviz.launch.py
rviz/: minimal_robot_view.rviz  navigation_view.rviz
